--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --config webpack.config.js"
+    "dev": "webpack --progress --colors"
   },
   "author": "chen_huang",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.7",
     "eslint": "^4.5.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.2.1",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
   }
 }
