--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,6 +2,10 @@
 env:
   browser: true
   node: true
+  es6: true
+  jquery: true
+parserOptions:
+  ecmaVersion: 6
 rules:
   eqeqeq: 0
   indent: ["error", 4]
