--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "webpack --progress --colors --config ./webpack.dev.js",
-    "build:prod": "webpack --progress --colors --config ./webpack.prod.js"
+    "build:prod": "webpack --progress --colors --config ./webpack.prod.js",
+    "dev": "webpack-dev-server --inline --devtool eval-cheap-module-source-map"
   },
   "author": "chen_huang",
   "license": "ISC",
@@ -32,6 +33,8 @@
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
     "style-loader": "^0.18.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0",
