--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "test",
+  "name": "webpack3learning",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc",
     "build:dev": "webpack-dev-server --colors --config ./webpack.dev.js",
     "build:prod": "webpack --progress --colors --config ./webpack.prod.js",
     "dev": "webpack-dev-server --inline --devtool eval-cheap-module-source-map"
   },
   "author": "chen_huang",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@types/react": "16.3.2",
+    "@types/react-dom": "^16.0.7",
+    "awesome-typescript-loader": "3.5.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
@@ -19,7 +22,10 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "^0.1.16",
@@ -35,18 +41,18 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
+    "mockjs": "^1.0.1-beta3",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "2.9.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   }
